bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: not found: value mess
    mess = litMessage();
    ^BDR:7: error: not found: value mes
    if (mes == "R") {
        ^BDR:11: error: type mismatch;
 found   : String("L")
 required: Boolean
    } else if ("L") {
               ^BDR:15: error: type mismatch;
 found   : String("I")
 required: Boolean
    } else if ("I") {
               ^BDR:19: error: type mismatch;
 found   : String("A")
 required: Boolean
    } else if ("A") {
               ^BDR:22: error: type mismatch;
 found   : String("B")
 required: Boolean
    } else if ("B") {
               ^BDR:26: error: type mismatch;
 found   : String("C")
 required: Boolean
    } else if ("C") {
               ^BDR:31: error: type mismatch;
 found   : String("Z")
 required: Boolean
    } else if ("Z") {
               ^BDR:34: error: type mismatch;
 found   : String("Y")
 required: Boolean
    } else if ("Y") {
               ^BDR:38: error: type mismatch;
 found   : String("X")
 required: Boolean
    } else if ("X") {
               ^