bdr.BDR.scala.code
var fini = false

while (fini == false) {
  if (estSurMessage() == true) {
    mess = litMessage();
    
    if (mes == "R") {
      droite();
      avance();
      
    } else if ("L") {
      gauche();
      avance();
      
    } else if ("I") {
      droite();
      droite();
      
    } else if ("A") {
      avance();
      
    } else if ("B") {
      avance();
      avance();
      
    } else if ("C") {
      avance();
      avance();
      avance();
      
    } else if ("Z") {
      recule();
      
    } else if ("Y") {
      recule();
      recule();
      
    } else if ("X") {
      recule();
      recule();
      recule();
      
    } else {
      fini = true;
      
    }
  } else {
    fini = true;
  }
}